# Rho

./: .gitignore  Cargo.toml  NEWS.md  README.md  Rho-implementation-plan.md
.github/workflows/: windows-manual-publish.yml
crates/rho-agent-transport/: Cargo.toml
crates/rho-core/: Cargo.toml
crates/rho-kernel/: Cargo.toml
crates/rho-protocol/: Cargo.toml
crates/rho-server/: Cargo.toml
crates/rho-server/src/: coordinator.rs  main.rs
crates/rho-store/: Cargo.toml
crates/rho-store/src/: lib.rs
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: 0.2-release-checklist.md  0.2x-agent-handoff.md  README.md  agent-file-editing-review-fixes.md  agent-llm-configuration-design.md  development-roadmap.md  phase-0-status.md  windows-build-environment.md  windows-prototype.md  windows-startup-diagnostics-and-recovery-design.md
docs/architecture/: aisdk-family-change-proposals.md  aisdk-family-integration.md  implemented-aisdk-family-integration.md  proposed-aisdk-family-change-proposals.md
docs/bug-fixes/: agent-file-editing-review-fixes.md  implemented-agent-file-editing-review-fixes.md
docs/decisions/: ADR-002-kernel-transport.md  README.md  accepted-ADR-002-kernel-transport.md  accepted-ADR-003-agent-transport.md
docs/design/: agent-file-editing-design.md  agent-llm-configuration-design.md  (+4 more)
runtime/: aisdk.json  ark.json
scripts/: bootstrap-ark-windows.ps1  build-windows-installer.ps1  invoke-0.2-release-checks.ps1  prepare-runtime-resources.ps1  sync-monaco-assets.mjs  test-release-metadata.ps1
(+45 files in other folders)
