[package]
name = "rho-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
rho-protocol = { path = "../rho-protocol" }
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

